hphp/hack/test/typecheck/nameof/erased_generic.php.exp
ERROR: File "erased_generic.php", line 5, characters 10-10:
`nameof` cannot be used with a generic type (Parsing[1002])
